inline pricesWithPerformance